# SonoCleaner

./: .gitignore  README.md  SonoCleaner.cabal  changelog.md  main.glade  stack.yaml
SonoCleaner/: README.md  SonoCleaner.cabal  main.glade  stack.yaml
SonoCleaner/app/: Controller.hs  Main.hs  Model.hs  View.hs
SonoCleaner/app/Controller/: GUIElements.hs  GUIState.hs  GUIStateWidgets.hs  GenericCallbacks.hs  Glade.hs  Interpreter.hs  Keybindings.hs  Mouse.hs  Sensitivity.hs  Util.hs
SonoCleaner/app/Model/: Gaps.hs  IndexedChain.hs  InterpolationBrush.hs  Jumps.hs  Labelling.hs  Manual.hs  Matching.hs  Model.hs  Slope.hs  TraceOperators.hs  TraceState.hs  Util.hs
SonoCleaner/app/Types/: Bounds.hs  IndexInterval.hs  Indices.hs  IntMap.hs  LevelShifts.hs  Series.hs  Zipper.hs
SonoCleaner/app/View/: ChartLayout.hs  Rendering.hs  Types.hs
SonoCleaner/examples/: example1.ssa  tutorial.ssa
SonoCleaner/usersGuide/: usersGuide.md
SonoSsa/: SonoSsa.cabal  stack.yaml
SonoSsa/src/: SonoSsa.hs
SonoSsa/src/SonoSsa/: Ssa.hs  Utils.hs
app/: Controller.hs  View.hs
app/Controller/: GUIElements.hs  GUIState.hs  GenericCallbacks.hs  Interpreter.hs  Util.hs
app/Model/: Model.hs  Ssa.hs  TraceOperators.hs
app/Types/: Bounds.hs
app/View/: Types.hs
doc/: usersGuide.md
src/: Controller.hs  Model.hs  View.hs
src/Controller/: AppState.hs  DialogCallbacks.hs  GUIState.hs  GUIStateCallbacks.hs  GUIStateSync.hs  GUIStateWidgets.hs  GenericCallbacks.hs  Glade.hs  Interpreter.hs  Keybindings.hs  Mouse.hs  MouseCallbacks.hs  Sensitivity.hs  Util.hs
src/Model/: Default.hs  Labelling.hs  Matching.hs  Model.hs  Slope.hs  Ssa.hs  TraceState.hs
src/Types/: Indices.hs  LevelShifts.hs
src/View/: ChartLayout.hs  Types.hs
test/: Tests.hs
