name:                SonoCleaner
version:             0.1.0
description:         Please see README.md
license:             PublicDomain
license-file:        LICENSE
author:              Alexander Chen <awchen@ucalgary.ca>
build-type:          Simple
cabal-version:       >=1.10

executable SonoCleaner
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Controller
                     , Controller.GenericCallbacks
                     , Controller.Glade
                     , Controller.GUIElements
                     , Controller.GUIState
                     , Controller.GUIStateWidgets
                     , Controller.Interpreter
                     , Controller.Keybindings
                     , Controller.Mouse
                     , Controller.Sensitivity
                     , Controller.Util
                     , Model
                     , Model.IndexedChain
                     , Model.InterpolationBrush
                     , Model.Labelling
                     , Model.Manual
                     , Model.Matching
                     , Model.Model
                     , Model.Slope
                     , Model.Ssa
                     , Model.TraceOperators
                     , Model.TraceState
                     , Types.Bounds
                     , Types.Indices
                     , Types.LevelShifts
                     , Types.Zipper
                     , View
                     , View.ChartLayout
                     , View.Rendering
                     , View.Types
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cairo
                     , cassava
                     , Chart
                     , Chart-cairo
                     , colour
                     , containers
                     , data-default
                     , directory
                     , double-conversion
                     , filepath
                     , gtk3 == 0.14.8
                     , heaps
                     , lens
                     , megaparsec
                     , monad-loops
                     , stm
                     , text
                     , raw-strings-qq
                     , statistics
                     , transformers
                     , vector
                     , vector-algorithms
                     , vector-th-unbox
  ghc-options:         -rtsopts -threaded -O2 -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -fno-warn-unused-top-binds -fno-warn-orphans
  default-language:    Haskell2010
