name:                SonoCleaner
version:             0.1.0
description:         Please see README.md
license:             PublicDomain
license-file:        LICENSE
author:              Alexander Chen <awchen@ucalgary.ca>
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Controller
                     , Controller.AppState
                     , Controller.GenericCallbacks
                     , Controller.Glade
                     , Controller.GUIElements
                     , Controller.GUIState
                     , Controller.GUIStateCallbacks
                     , Controller.GUIStateSync
                     , Controller.GUIStateWidgets
                     , Controller.Interpreter
                     , Controller.Keybindings
                     , Controller.Mouse
                     , Controller.Sensitivity
                     , Controller.Util
                     , Model
                     , Model.Default
                     , Model.IndexedChain
                     , Model.InterpolationBrush
                     , Model.Labelling
                     , Model.Manual
                     , Model.Matching
                     , Model.Model
                     , Model.Slope
                     , Model.Ssa
                     , Model.TraceOperators
                     , Model.TraceState
                     , Types.Bounds
                     , Types.Indices
                     , Types.LevelShifts
                     , Types.Zipper
                     , View
                     , View.ChartLayout
                     , View.Rendering
                     , View.Types
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cairo
                     , cassava
                     , Chart
                     , Chart-cairo
                     , colour
                     , containers
                     , data-default
                     , directory
                     , double-conversion
                     , filepath
                     , gtk3 == 0.14.8
                     , heaps
                     , lens
                     , megaparsec
                     , monad-loops
                     , stm
                     , text
                     , time
                     , raw-strings-qq
                     , statistics
                     , transformers
                     , vector
                     , vector-algorithms
                     , vector-th-unbox
  ghc-options:         -O2 -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -fno-warn-unused-top-binds -fno-warn-orphans
  default-language:    Haskell2010

executable SonoCleaner
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , SonoCleaner
  ghc-options:         -rtsopts -threaded -O2
  default-language:    Haskell2010

test-suite test-SonoCleaner
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:       base
                     , SonoCleaner
                     , raw-strings-qq
                     , tasty
                     , tasty-hunit
                     , text
  default-language:    Haskell2010
