name:                SonoSsa
version:             0.1.0
license:             PublicDomain
license-file:        LICENSE
author:              Alexander Chen <awchen@ucalgary.ca>
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SonoSsa, SonoSsa.Ssa, SonoSsa.Utils
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , double-conversion
                     , lens
                     , megaparsec
                     , text
                     , transformers
                     , vector
  ghc-options:         -O2
  default-language:    Haskell2010
